# Gaussian-LIC

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: fastlivo.yaml  mcd.yaml  r3live.yaml
launch/: fastlivo.launch  mcd.launch  r3live.launch
src/: camera.h  gaussian.cpp  gaussian.h  general_utils.h  loss_utils.h  mapping.cpp  mapping.h  optim_utils.h  tensor_utils.h  tinyply.h
src/fused-ssim/: ssim.cu
src/lpips/: save_alex.py  save_vgg.py
src/lpips/lpipsPyTorch/modules/: networks.py
src/rasterizer/: rasterize_points.cu  rasterize_points.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h
src/rasterizer/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
